# noson-app

./: .gitignore  .gitmodules  .travis.yml  AppImageBuilder.yml  CMakeLists.txt  Noson-content.json  Noson.desktop.in  README.md  index.html  io.github.janbar.noson.appdata.xml  manifest.json.in  music_services.html  noson-app.in  noson-app.snap.in  noson.apparmor  noson.appdata.xml.in  noson.desktop.in  noson.janbar.in
app/: CMakeLists.txt  Main.qml  main.qml  noson.cpp  noson.qml  noson.qrc  signalhandler.cpp  signalhandler.h
app/components/: BlurredBackground.qml  BlurredHeader.qml  CMakeLists.txt  CoverGrid.qml  DefaultSections.qml  LoadingSpinnerComponent.qml  MusicCheckBox.qml  MusicHeader.qml  MusicPage.qml  MusicRow.qml  MusicToolbar.qml  NowPlayingFullView.qml  NowPlayingSidebar.qml  NowPlayingToolbar.qml  Player.qml  PlaylistsEmptyState.qml  PopInfo.qml  Queue.qml  RenderingBubble.qml  RenderingControlerView.qml  ServiceLogin.qml  ServiceRegistration.qml  SimpleRow.qml  SoundSliderStyle.qml  StreamRow.qml  Style.qml  StyledSlider.qml  TrackQueue.qml  ZoneControls.qml
app/components/ActivitySpinner/: ActivitySpinner.qml  CMakeLists.txt  (+1 more)
app/diskcache/: cachereply.cpp  cachingnetworkaccessmanager.h  diskcachefactory.cpp
app/i18n/: noson_en.qm  noson_en.ts  noson_fr.qm  noson_fr.ts  noson_nl.qm  noson_nl.ts
app/ui/: AddService.qml  AddToPlaylist.qml  Albums.qml  ArtistView.qml  Artists.qml  CMakeLists.txt  Favorites.qml  Genres.qml  Group.qml  MusicServices.qml  NoZoneState.qml  NowPlaying.qml  Playlists.qml  Radios.qml  Service.qml  SongsView.qml  Zones.qml
backend/: CMakeLists.txt
backend/NosonApp/: CMakeLists.txt  alarmsmodel.cpp  alarmsmodel.h  albumsmodel.cpp  albumsmodel.h  allservicesmodel.cpp  allservicesmodel.h  artistsmodel.cpp  artistsmodel.h  composersmodel.cpp  composersmodel.h  cppdef.h  favoritesmodel.cpp  favoritesmodel.h  future.cpp  future.h  genresmodel.cpp  genresmodel.h  librarymodel.cpp  librarymodel.h  listmodel.cpp  listmodel.h  locked.h  mediamodel.cpp  mediamodel.h  player.cpp  player.h  playlistsmodel.cpp  playlistsmodel.h  plugin.cpp  plugin.h  qmldir  qmlfilterbehavior.cpp  qmlfilterbehavior.h  qmlsortbehavior.cpp  qmlsortbehavior.h  qmlsortfiltermodel.cpp  qmlsortfiltermodel.h  queuemodel.cpp  queuemodel.h  (+15 more)
backend/NosonMediaScanner/: CMakeLists.txt  byteorder.cpp  byteorder.h  flacparser.cpp  flacparser.h  id3parser.cpp  id3parser.h  id3v1genres.h  listmodel.cpp  listmodel.h  locked.h  m4aparser.cpp  m4aparser.h  mediaextractor.cpp  mediaextractor.h  mediafile.h  mediainfo.h  mediaparser.h  mediarunnable.cpp  mediarunnable.h  mediascanner.cpp  mediascanner.h  mediascannerengine.cpp  mediascannerengine.h  oggparser.cpp  oggparser.h  packed.h  plugin.cpp  plugin.h  qmldir  tools.h
backend/NosonThumbnailer/: CMakeLists.txt  albumartgenerator.cpp  albumartgenerator.h  artistartgenerator.cpp  artistartgenerator.h  plugin.cpp  plugin.h  qmldir  thumbnailerimageresponse.cpp  thumbnailerimageresponse.h
backend/cli/: CMakeLists.txt  builtin.h  noson.cpp  tokenizer.h
backend/lib/: CMakeLists.txt  refresh.sh
cli/: CMakeLists.txt  noson.cpp
gui/: CMakeLists.txt  noson.cpp  noson.qml  noson.qrc  noson_controls2.qrc  noson_controls2_509.qrc  noson_controls2_515.qrc  noson_controls2_640.qrc  noson_silica.qrc  signalhandler.cpp  signalhandler.h  toolbox.js
gui/components/: ActivitySpinner.qml  AlarmsEmptyState.qml  BlurredBackground.qml  ClockTumbler.qml  CoverGrid.qml  DataFailureState.qml  DefaultSections.qml  Icon.qml  IndexEmptyState.qml  IndexUpdateState.qml  MusicCheckBox.qml  MusicFilter.qml  MusicHeader.qml  MusicPage.qml  MusicRow.qml  MusicToolbar.qml  NowPlayingFullView.qml  NowPlayingSidebar.qml  NowPlayingToolbar.qml  Player.qml  PlaylistsEmptyState.qml  PopInfo.qml  Queue.qml  RenderingBubble.qml  RenderingControlerView.qml  ServiceEmptyState.qml  ServiceLogin.qml  ServiceRegistration.qml  SimpleRow.qml  Style.qml  StyleLight.qml  StyledSlider.qml  TrackQueue.qml  Units.qml  ZoneControls.qml
gui/controls2/: AddService.qml  AddToPlaylist.qml  Alarms.qml  Albums.qml  ArtistView.qml  Artists.qml  ComposerView.qml  Composers.qml  Favorites.qml  Genres.qml  Index.qml  MusicServices.qml  Playlists.qml  QueueView.qml  Service.qml  SongsView.qml  ThisDevice.qml  Zones.qml  noson.qml
gui/controls2_509/: AddService.qml  AddToPlaylist.qml  Alarms.qml  Albums.qml  ComposerView.qml  Favorites.qml  Genres.qml  Group.qml  Index.qml  Library.qml  MusicServices.qml  NowPlaying.qml  Playlists.qml  QueueView.qml  RadioStations.qml  Service.qml  SongsView.qml  TrackStackView.qml  Zones.qml  noson.qml
gui/controls2_515/: Alarms.qml  Albums.qml  ArtistView.qml  Artists.qml  ComposerView.qml  Composers.qml  Favorites.qml  Genres.qml  Index.qml  Library.qml  MusicServices.qml  NowPlaying.qml  Playlists.qml  QueueView.qml  Service.qml  SongsView.qml  ThisDevice.qml  TrackStackView.qml  Zones.qml  noson.qml  qtquickcontrols2.conf
gui/controls2_640/: AddToPlaylist.qml  Alarms.qml  CMakeLists.txt  Favorites.qml  Library.qml  NoZoneState.qml  NowPlaying.qml  Playlists.qml  QueueView.qml  RadioStations.qml  Service.qml  ThisDevice.qml  TrackStackView.qml  Welcome.qml  Zones.qml  noson.qml
gui/diskcache/: cachereply.cpp  cachereply.h  cachingnetworkaccessmanager.cpp  cachingnetworkaccessmanager.h  diskcachefactory.cpp  diskcachefactory.h
gui/i18n/: HOWTO.md  README.md  noson_da.qm  noson_da.ts  noson_de.qm  noson_de.ts  noson_en.qm  noson_en.ts  noson_fr.qm  noson_fr.ts  noson_nb.qm  noson_nb.ts  noson_nl.qm  noson_nl.ts
gui/sfos/: CMakeLists.txt  harbour-noson.qml  noson-sfos.pro
gui/silica/: CMakeLists.txt  noson.qml
gui/ui/: AddService.qml  AddToPlaylist.qml  Alarms.qml  Albums.qml  ArtistView.qml  Artists.qml  CMakeLists.txt  ComposerView.qml  Composers.qml  Favorites.qml  Genres.qml  Group.qml  Index.qml  MusicServices.qml  NoZoneState.qml  NowPlaying.qml  Playlists.qml  QueueView.qml  Radios.qml  Service.qml  SongsView.qml  ThisDevice.qml  Welcome.qml  Zones.qml
po/: CMakeLists.txt  de.po  fr.po  it.po  nl.po  noson.janbar.pot
(+767 files in other folders)
